Provide a default value of `jenkins.addOpens` for the benefit of IDEs